--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_modular: ^5.0.3
+  sqflite: ^2.2.2
 
 dev_dependencies:
   flutter_test:
