--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sqflite: ^2.2.2
   mobx: ^2.1.3
   flutter_mobx: ^2.0.6+5
+  mockito: ^5.3.2
 
 dev_dependencies:
   flutter_test:
